# tilt_detection_system

./: readme.md
embedded/: CMakeLists.txt
embedded/src/: DataSender.cpp  DataSender.h  Example.cpp  MPU6050.cpp
httpclient/: _CMakeLists.txt
httpclient/src/: DataSender.cpp  Example.cpp  MPU6050.cpp  MPU6050.h
httpsrv/: expressserver.mjs  localhost.pem  package-lock.json  package.json  receivedData.json
reactjs/reactapp/: package-lock.json  package.json
reactjs/reactapp/src/: App.css  App.js
reactjs/servernodejs/: expressserver.mjs  localhost-key.pem
server/: Expserver.mjs  package-lock.json  server-key.pem
server/public/: grafica.css  index.html
server2/: package.json  server-cert.pem
server2/public/: grafica.css
webclient/src/: App.js
